@@ -1,7 +1,9 @@
 0.1-76
-- plot.ctd: add Slim, Tlim, plim, lonlim, latlim arguments; add ability to draw maps
+- plot.profile(): add type sigma+dpdt
+- ctd.trim(): add pmin parameter
+- plot.ctd(): add Slim, Tlim, plim, lonlim, latlim arguments; add ability to draw maps
 - add coastline.sle dataset
-- plot.TS: fix isopycnal labels for fresh water; add Slim and Tlim arguments
+- plot.TS(): fix isopycnal labels for fresh water; add Slim and Tlim arguments
 - make read.ctd() understand another SBE format
 - add parse.latlon()
 - add argument 'action' to oce.edit()
